[workspace]
members = [".", "xtask", "sdl2-test", "sdl2main"]
resolver = "2"

[package]
name = "safe-sdl"
version = "0.1.0"
edition = "2021"
publish = false
description = "Bootstrap SDL2 ABI contract capture and stub surface"

[lib]
name = "safe_sdl"
crate-type = ["cdylib", "staticlib", "rlib"]
doctest = false

[features]
host-video-tests = []

[dependencies]
libc = "0.2"

[build-dependencies]
cc = "1.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.15"
