[package]
name = "libturbojpeg-abi"
version.workspace = true
edition.workspace = true
publish.workspace = true

[lib]
path = "src/lib.rs"
crate-type = ["rlib", "staticlib"]

[dependencies]
ffi-types = { path = "../ffi-types" }
jpeg-core = { path = "../jpeg-core" }
libjpeg-abi = { path = "../libjpeg-abi" }
